
Version 7.4.0 - 2024-11-04
--------------------------
* Bug fixes (see mercurial logs for details)


Version 7.2.0 - 2024-04-29
--------------------------
* Bug fixes (see mercurial logs for details)
* Add skip warning on trytond configuration

Version 7.0.0 - 2023-10-30
--------------------------
* Bug fixes (see mercurial logs for details)
* Add support for Python 3.12
* Support PYSON comparison of timedelta
* Support encoding timedelta into PYSON TimeDelta

Version 6.8.0 - 2023-05-01
--------------------------
* Bug fixes (see mercurial logs for details)
* Remove support for Python 3.7
* Add support for Python 3.11
* Manage RPCReturnException
* Run action from button

Version 6.6.0 - 2022-10-31
--------------------------
* Bug fixes (see mercurial logs for details)

Version 6.4.0 - 2022-05-02
--------------------------
* Bug fixes (see mercurial logs for details)
* Use unittest discover
* Support notification message
* Use defusedxml to parse XML (11244)
* Add support for Python 3.10
* Remove support for Python 3.6

Version 6.2.0 - 2021-11-01
--------------------------
* Bug fixes (see mercurial logs for details)
* Support session with XML-RPC
* Use bigdecimal tag for XML-RPC

Version 6.0.0 - 2021-05-03
--------------------------
* Bug fixes (see mercurial logs for details)
* Add support for Python 3.9
* Unify PYSON string format

Version 5.8.0 - 2020-11-02
--------------------------
* Bug fixes (see mercurial logs for details)
* Remove support for Python 3.5
* Support PYSON comparison of date and datetime

Version 5.6.0 - 2020-05-04
--------------------------
* Bug fixes (see mercurial logs for details)
* Add support for Python 3.8
* Use same __str__ as trytond instances

Version 5.4.0 - 2019-11-04
--------------------------
* Bug fixes (see mercurial logs for details)
* Support dot notation on PYSON Eval
* Add __slots__

Version 5.2.0 - 2019-05-06
--------------------------
* Bug fixes (see mercurial logs for details)
* Remove support for Python 3.4
