@@ -1,3 +1,4 @@
+* Add launch_action helper function
 
 Version 7.4.0 - 2024-11-04
 --------------------------
